--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prismicio/client": "^5.0.0",
     "@stripe/stripe-js": "^1.15.0",
     "@types/next-auth": "^3.15.0",
     "axios": "^0.21.1",
@@ -15,6 +16,7 @@
     "next": "10.2.2",
     "next-auth": "^3.23.3",
     "node-jose-tools": "^1.6.28",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.3.1",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.6",
     "typescript": "^4.2.4"
   }
